--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
-    <div id="loader"><h1>Loading<span>.</span><span>.</span><span>.</span></h1></div>
+    <div id="loader">Loading</div>
+
+    
 
     <header>
-        <div class="logo"><span>SILKSONG</span></div>
+        <div class="entete"><span>Hollow Knight: Silksong</span></div>
         <ul>
             <li><a href="">Accueil</a></li>
             <li><a href="">Sujet</a></li>
@@ -21,7 +23,9 @@
           </ul>
     </header>
 
+
     <main>
+        <a href="/images/Title.png"><img src="/images/Title.png" alt="L'image" /> </a>
 
 
 
