--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
             <div class="title"><h1>SILKSONG</h1></div>
             
             <section id="accueil">
-                <img src="/images/image_1.jpg" alt="">
+                <img src="/images/07_clover.png" alt="">
+                <p></p>
+                <p></p>
+                <img src="/images/08_bellhart.png" alt="">
+                <img src="/images/11_lace.png" alt="">
+                <p></p>
 
             </section>
 
@@ -42,10 +47,10 @@
     <footer>
         <section class="Sommaire">
             <div class="som">
-                <a href="" title="SHERMA">Sujet<span class="fa-solid fa-spider" style="color: #c0c0c0;"></span></a>
+                <a href="/Sujet.html" title="SHERMA">Sujet<span class="fa-solid fa-spider" style="color: #c0c0c0;"></span></a>
             </div>
             <div class="som">
-                <a href="" title="GITDUD">Auteur<span class="fa-solid fa-user" style="color: #c0c0c0;"></span></a>
+                <a href="/Auteur.html" title="GITDUD">Auteur<span class="fa-solid fa-user" style="color: #c0c0c0;"></span></a>
             </div>
 
         </section>
