--- a/Auteur.html
+++ b/Auteur.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <script src="https://kit.fontawesome.com/0acb75a9e8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
 </head>
 <body>
     
+    <footer>
+        <section class="Sommaire">
+            <div class="som">
+                <a href="/Sujet.html" title="SHERMA">Sujet<span class="fa-solid fa-spider" style="color: #c0c0c0;"></span></a>
+            </div>
+            <div class="som">
+                <a href="/index.html" title="GITDUD">Auteur<span class="fa-solid fa-home" style="color: #c0c0c0;"></span></a>
+            </div>
+
+        </section>
+    </footer>
+
 </body>
 </html>
