--- a/index copy.html
+++ b/index copy.html
@@ -15,15 +15,26 @@
 
 
     <header>
-        <img src="images/" alt="Ma photo d'identité" />
-        <nav>
-            <a href="https://www.facebook.com/?locale=fr_FR" target="_blank" aria-label="facebook"><em
-                    class="fa-brands fa-2x fa-facebook"></em></a>
-            <a href="https://github.com/princecorg" target="_blank" aria-label="github"><em
-                    class="fa-brands fa-2x fa-github"></em></a>
-            <a href="https://www.linkedin.com/in/christophe-vallot/" target="_blank" aria-label="linkedin"><em
-                    class="fa-brands fa-2x fa-linkedin"></em></a>
-        </nav>
+        <section id="header">
+            <div><nav>
+                <a href=""><img src="/images/hornet_large.png" class="img_header"></a> 
+            </nav>
+            <nav id="Main_Header">
+                <h1 style="color: azure;">SILKSONG</h1>
+            </nav>
+        </div>
+            
+
+            <nav>
+                <a href="https://www.facebook.com/?locale=fr_FR" target="_blank" aria-label="facebook"><em
+                        class="fa-brands fa-2x fa-facebook"></em></a>
+                <a href="https://github.com/princecorg" target="_blank" aria-label="github"><em
+                        class="fa-brands fa-2x fa-github"></em></a>
+                <a href="https://www.linkedin.com/in/christophe-vallot/" target="_blank" aria-label="linkedin"><em
+                        class="fa-brands fa-2x fa-linkedin"></em></a>
+            </nav>
+
+        </section>
 
 
 
