--- a/index copy.html
+++ b/index copy.html
@@ -16,16 +16,31 @@
 
     <header>
         <section id="header">
-            <div><nav>
-                <a href=""><img src="/images/hornet_large.png" class="img_header"></a> 
-            </nav>
-            <nav id="Main_Header">
-                <h1 style="color: azure;">SILKSONG</h1>
-            </nav>
-        </div>
-            
-
-            <nav>
+            <section id="First">
+                <div>
+                    <nav>
+                        <a href=""><img src="/images/hornet_large.png" class="img_header"></a>
+                    </nav>
+                    <nav id="Main_Header">
+                        <h1 style="color: azure;">SILKSONG</h1>
+                    </nav>
+                </div>
+                <div>
+                    <nav id="Main_Header">
+                        <a href="" title="SHAW">Sur_Le_Jeu<span class="fa-solid fa-spider"
+                                style="color: #c0c0c0;"></span></a>
+                    </nav>
+                </div>
+                <div>
+                    <nav id="Main_Header">
+                        <a href="" title="SHAW">Sur_Moi<span class="fa-solid fa-user"
+                                style="color: #c0c0c0;"></span></a>
+                    </nav>
+                </div>
+            </section>
+            <section id="Second">
+                
+            <nav id="Navigation">
                 <a href="https://www.facebook.com/?locale=fr_FR" target="_blank" aria-label="facebook"><em
                         class="fa-brands fa-2x fa-facebook"></em></a>
                 <a href="https://github.com/princecorg" target="_blank" aria-label="github"><em
@@ -33,6 +48,11 @@
                 <a href="https://www.linkedin.com/in/christophe-vallot/" target="_blank" aria-label="linkedin"><em
                         class="fa-brands fa-2x fa-linkedin"></em></a>
             </nav>
+
+            </section>
+
+
+
 
         </section>
 
