--- a/Sujet.html
+++ b/Sujet.html
@@ -1,26 +1,115 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0acb75a9e8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style copy.css" />
+    <title>Sur le Jeu</title>
 </head>
+
 <body>
+    <header>
+        <section id="header">
+            <section id="First">
+                <div>
+                    <nav>
+                        <a href=""><img src="/images/hornet_large.png" class="img_header"></a>
+                    </nav>
+                    <nav id="Main_Header">
+                        <h1 style="color: azure;">SILKSONG</h1>
+                    </nav>
+                </div>
+                <div>
+                    <nav id="Main_Header">
+                        <a href="/index copy.html" title="SHAW">Accueil<span class="fa-solid fa-home"
+                                style="color: #c0c0c0;"></span></a>
+                    </nav>
+                </div>
+                <div>
+                    <nav id="Main_Header">
+                        <a href="" title="SHAW">Sur_Moi<span class="fa-solid fa-user"
+                                style="color: #c0c0c0;"></span></a>
+                    </nav>
+                </div>
+            </section>
+            <section id="Second">
+
+                <nav id="Navigation">
+                    <a href="https://www.facebook.com/?locale=fr_FR" target="_blank" aria-label="facebook"><em
+                            class="fa-brands fa-2x fa-facebook"></em></a>
+                    <a href="https://github.com/princecorg" target="_blank" aria-label="github"><em
+                            class="fa-brands fa-2x fa-github"></em></a>
+                    <a href="https://www.linkedin.com/in/christophe-vallot/" target="_blank" aria-label="linkedin"><em
+                            class="fa-brands fa-2x fa-linkedin"></em></a>
+                </nav>
+
+            </section>
+
+
+
+
+        </section>
+
+
+
+    </header>
+    <main>
+
+        <section id="Main_Jeu" >
+            <iframe id="YTB"
+                src="https://www.youtube.com/embed/6XGeJwsUP9c">
+            </iframe>
+
+
+        </section>
+        <section id="Board_Container">
+            <div id="Jeu_Board">
+                <img src="/images/07_clover.png" alt="">
+                <p></p>
+                <p></p>
+                <img src="/images/08_bellhart.png" alt="">
+                <img src="/images/11_lace.png" alt="">
+                <p></p>
     
-    <footer>
-        <section class="Sommaire">
-            <div class="som">
-                <a href="/index.html" title="SHERMA">Sujet<span class="fa-solid fa-house" style="color: #c0c0c0;"></span></a>
-            </div>
-            <div class="som">
-                <a href="/Auteur.html" title="GITDUD">Auteur<span class="fa-solid fa-user" style="color: #c0c0c0;"></span></a>
             </div>
 
         </section>
+        
+        <section id="Under_Main_Jeu">
+            <h2>WOW WOW WOW</h2>
+            <p>bla bla bla bal</p>
+
+        </section>
+        <section>
+
+
+        </section>
+        <section id="Jeu_Soundtrack">
+            <nav>
+                <h2>
+                    SOUNDTRACK
+
+                </h2>
+                <p>
+                    Made by Christopher Larkin
+
+                </p>
+            </nav>
+            <img src="/images/Silksong_Soundtrack_Cover.png" alt="">
+
+        </section>
+
+
+    </main>
+    <footer>
+
+
     </footer>
 
 
+
 </body>
+
 </html>
