--- a/index copy.html
+++ b/index copy.html
@@ -10,7 +10,7 @@
     <title>SILKSONG !</title>
 </head>
 
-<body>
+<body id="Accueil">
     <div id="loader">Loading</div>
 
 
@@ -27,13 +27,13 @@
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="" title="SHAW">Sur_Le_Jeu<span class="fa-solid fa-spider"
+                        <a href="/Sujet.html" title="SHAW">Sur_Le_Jeu<span class="fa-solid fa-spider"
                                 style="color: #c0c0c0;"></span></a>
                     </nav>
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="" title="SHAW">Sur_Moi<span class="fa-solid fa-user"
+                        <a href="/Auteur.html" title="SHAW">Sur_Moi<span class="fa-solid fa-user"
                                 style="color: #c0c0c0;"></span></a>
                     </nav>
                 </div>
@@ -59,7 +59,7 @@
 
 
     </header>
-    <main>
+    <main id="Main_Accueil">
         <section>
 
             <a href="/images/Title.png"><img src="/images/Title.png" alt="L'image" /> </a>
