--- a/index copy.html
+++ b/index copy.html
@@ -17,7 +17,7 @@
     <header>
         <section id="header">
             <section id="First">
-                <div>
+                <div id="text">
                     <nav>
                         <a href=""><img src="/images/hornet_large.png" class="img_header"></a>
                     </nav>
@@ -63,7 +63,7 @@
         <section>
 
             <a href="/images/Title.png"><img src="/images/Title.png" alt="L'image" /> </a>
-            <div>
+            <div id="text">
                 <p class="paragraphe">Silksong est le sequel tant attendu du jeu indé "Hollow Knight"</p>
             </div>
         </section>
