--- a/Sujet.html
+++ b/Sujet.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0acb75a9e8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style copy.css" />
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -16,7 +17,7 @@
     <header>
         <section id="header">
             <section id="First">
-                <div id="text">
+                <div>
                     <nav>
                         <a href=""><img src="/images/hornet_large.png" class="img_header"></a>
                     </nav>
@@ -127,17 +128,18 @@
 
         </section>
         <section id="Jeu_Soundtrack">
-            <div id="text">
+            <div id="Sound">
                 <h2>
                     SOUNDTRACK
 
                 </h2>
+                
                 <p>
                     Made by Christopher Larkin
 
                 </p>
             </div>
-            <img src="/images/Silksong_Soundtrack_Cover.png" alt="">
+            <div ><img id="Sound_Img" src="/images/Silksong_Soundtrack_Cover.png" alt=""></div>
 
         </section>
 
