--- a/index copy.html
+++ b/index copy.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0acb75a9e8.js" crossorigin="anonymous"></script>
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="css/style copy.css" />
     <link rel="icon" type="image/.ico" href="/images/favicon.ico">
     <title>SILKSONG !</title>
@@ -17,7 +18,7 @@
     <header>
         <section id="header">
             <section id="First">
-                <div id="text">
+                <div>
                     <nav>
                         <a href=""><img src="/images/hornet_large.png" class="img_header"></a>
                     </nav>
@@ -27,14 +28,13 @@
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="/Sujet.html" title="SHAW">Sur_Le_Jeu<span class="fa-solid fa-spider"
-                                style="color: #c0c0c0;"></span></a>
+                        <a href="/Sujet.html" title="SHAW" style="color: #c0c0c0;">Sur le jeu<span class="fa-solid fa-spider"
+                                ></span></a>
                     </nav>
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="/Auteur.html" title="SHAW">Sur_Moi<span class="fa-solid fa-user"
-                                style="color: #c0c0c0;"></span></a>
+                        <a href="/Auteur.html" title="SHAW" style="color: #c0c0c0;">Sur moi<span class="fa-solid fa-user"></span></a>
                     </nav>
                 </div>
             </section>
@@ -47,7 +47,20 @@
                         class="fa-brands fa-2x fa-github"></em></a>
                 <a href="https://www.linkedin.com/in/christophe-vallot/" target="_blank" aria-label="linkedin"><em
                         class="fa-brands fa-2x fa-linkedin"></em></a>
+                        
+
             </nav>
+            <nav id="Burger">
+                <input type="checkbox" id="check">
+                <label for="check" class="checkbtn">
+                  <i class="fas fa-bars"></i>
+                </label>
+                <div class="nav-mobile">
+                  <a href="/Sujet.html">Sur_Le_Jeu</a>
+                  <a href="/Auteur.html">Sur_Moi</a>
+                  <a href="#">Services</a>
+                </div>
+              </nav>
 
             </section>
 
