--- a/Auteur.html
+++ b/Auteur.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <script src="https://kit.fontawesome.com/0acb75a9e8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style copy.css" />
+    <script src="https://kit.fontawesome.com/0acb75a9e8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/.ico" href="/images/favicon.ico">
     <title>Document</title>
 </head>
+
 <body>
     <div id="loader">Loading</div>
 
@@ -24,39 +27,40 @@
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="/Sujet.html" title="SHAW" style="color: #c0c0c0;">Sur le jeu<span class="fa-solid fa-spider"
-                                ></span></a>
+                        <a href="/Sujet.html" title="SHAW" style="color: #c0c0c0;">Sur le jeu<span
+                                class="fa-solid fa-spider"></span></a>
                     </nav>
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="/Auteur.html" title="SHAW" style="color: #c0c0c0;">Sur moi<span class="fa-solid fa-user"></span></a>
+                        <a href="/index.html" title="SHAW" style="color: #c0c0c0;">Acceuil<span
+                                class="fa-solid fa-house"></span></a>
                     </nav>
                 </div>
             </section>
             <section id="Second">
-                
-            <nav id="Navigation">
-                <a href="https://www.facebook.com/?locale=fr_FR" target="_blank" aria-label="facebook"><em
-                        class="fa-brands fa-2x fa-facebook"></em></a>
-                <a href="https://github.com/princecorg" target="_blank" aria-label="github"><em
-                        class="fa-brands fa-2x fa-github"></em></a>
-                <a href="https://www.linkedin.com/in/christophe-vallot/" target="_blank" aria-label="linkedin"><em
-                        class="fa-brands fa-2x fa-linkedin"></em></a>
-                        
 
-            </nav>
-            <nav id="Burger">
-                <input type="checkbox" id="check">
-                <label for="check" class="checkbtn">
-                  <i class="fas fa-bars"></i>
-                </label>
-                <div class="nav-mobile">
-                  <a href="/Sujet.html">Sur_Le_Jeu</a>
-                  <a href="/Auteur.html">Sur_Moi</a>
-                  <a href="#">Services</a>
-                </div>
-              </nav>
+                <nav id="Navigation">
+                    <a href="https://www.facebook.com/?locale=fr_FR" target="_blank" aria-label="facebook"><em
+                            class="fa-brands fa-2x fa-facebook"></em></a>
+                    <a href="https://github.com/princecorg" target="_blank" aria-label="github"><em
+                            class="fa-brands fa-2x fa-github"></em></a>
+                    <a href="https://www.linkedin.com/in/christophe-vallot/" target="_blank" aria-label="linkedin"><em
+                            class="fa-brands fa-2x fa-linkedin"></em></a>
+
+
+                </nav>
+                <nav id="Burger">
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <i class="fas fa-bars"></i>
+                    </label>
+                    <div class="nav-mobile">
+                        <a href="/Sujet.html">Sur_Le_Jeu</a>
+                        <a href="/Auteur.html">Sur_Moi</a>
+                        <a href="#">Services</a>
+                    </div>
+                </nav>
 
             </section>
 
@@ -75,4 +79,5 @@
     </footer>
 
 </body>
+
 </html>
