--- a/Sujet.html
+++ b/Sujet.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0acb75a9e8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style copy.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -29,7 +29,7 @@
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="/Sujet.html" title="SHAW" style="color: #c0c0c0;">Sur le jeu<span
+                        <a href="/index.html" title="SHAW" style="color: #c0c0c0;">Acceuil<span
                                 class="fa-solid fa-spider"></span></a>
                     </nav>
                 </div>
