Fixing_Img_Path

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <section id="First">
                 <div>
                     <nav>
-                        <a href=""><img src="/images/hornet_large.png" class="img_header"></a>
+                        <a href=""><img src="./images/hornet_large.png" class="img_header"></a>
                     </nav>
                     <nav id="Main_Header">
                         <h1 style="color: azure;">SILKSONG</h1>
@@ -75,7 +75,7 @@
     <main id="Main_Accueil">
         <section>
 
-            <a href="/images/Title.png"><img src="/images/Title.png" alt="L'image" /> </a>
+            <a href="/images/Title.png"><img src="./images/Title.png" alt="L'image" /> </a>
             <div id="text">
                 <p class="paragraphe">Silksong est le sequel tant attendu du jeu indé "Hollow Knight"</p>
             </div>
