Fixing_Img_Path_2

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0acb75a9e8.js" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" type="image/.ico" href="/images/favicon.ico">
     <title>SILKSONG !</title>
 </head>
@@ -28,13 +28,13 @@
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="/Sujet.html" title="SHAW" style="color: #c0c0c0;">Sur le jeu<span class="fa-solid fa-spider"
+                        <a href="Sujet.html" title="SHAW" style="color: #c0c0c0;">Sur le jeu<span class="fa-solid fa-spider"
                                 ></span></a>
                     </nav>
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="/Auteur.html" title="SHAW" style="color: #c0c0c0;">Sur moi<span class="fa-solid fa-user"></span></a>
+                        <a href="./Auteur.html" title="SHAW" style="color: #c0c0c0;">Sur moi<span class="fa-solid fa-user"></span></a>
                     </nav>
                 </div>
             </section>
