Fixing_Path_GitHubPages_2

--- a/Auteur.html
+++ b/Auteur.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0acb75a9e8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/.ico" href="/images/favicon.ico">
+    <link rel="icon" type="image/.ico" href="./images/favicon.ico">
     <title>Document</title>
 </head>
 
@@ -19,7 +19,7 @@
             <section id="First">
                 <div>
                     <nav>
-                        <a href=""><img src="/images/hornet_large.png" class="img_header"></a>
+                        <a href=""><img src="./images/hornet_large.png" class="img_header"></a>
                     </nav>
                     <nav id="Main_Header">
                         <h1 style="color: azure;">SILKSONG</h1>
@@ -27,13 +27,13 @@
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="/Sujet.html" title="SHAW" style="color: #c0c0c0;">Sur le jeu<span
+                        <a href="Sujet.html" title="SHAW" style="color: #c0c0c0;">Sur le jeu<span
                                 class="fa-solid fa-spider"></span></a>
                     </nav>
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="/index.html" title="SHAW" style="color: #c0c0c0;">Acceuil<span
+                        <a href="index.html" title="SHAW" style="color: #c0c0c0;">Acceuil<span
                                 class="fa-solid fa-house"></span></a>
                     </nav>
                 </div>
@@ -56,8 +56,8 @@
                         <i class="fas fa-bars"></i>
                     </label>
                     <div class="nav-mobile">
-                        <a href="/Sujet.html">Sur_Le_Jeu</a>
-                        <a href="/Auteur.html">Sur_Moi</a>
+                        <a href="Sujet.html">Sur_Le_Jeu</a>
+                        <a href="Auteur.html">Sur_Moi</a>
                         <a href="#">Services</a>
                     </div>
                 </nav>
