--- a/Sujet.html
+++ b/Sujet.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="icon" type="image/.ico" href="/images/favicon.ico">
+    <link rel="icon" type="image/.ico" href="./images/favicon.ico">
     <title>Sur le Jeu</title>
 </head>
 
@@ -21,7 +21,7 @@
             <section id="First">
                 <div>
                     <nav>
-                        <a href=""><img src="/images/hornet_large.png" class="img_header"></a>
+                        <a href=""><img src="./images/hornet_large.png" class="img_header"></a>
                     </nav>
                     <nav id="Main_Header">
                         <h1 style="color: azure;">SILKSONG</h1>
@@ -29,13 +29,13 @@
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="/index.html" title="SHAW" style="color: #c0c0c0;">Acceuil<span
+                        <a href="index.html" title="SHAW" style="color: #c0c0c0;">Acceuil<span
                                 class="fa-solid fa-spider"></span></a>
                     </nav>
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="/Auteur.html" title="SHAW" style="color: #c0c0c0;">Sur moi<span
+                        <a href="Auteur.html" title="SHAW" style="color: #c0c0c0;">Sur moi<span
                                 class="fa-solid fa-user"></span></a>
                     </nav>
                 </div>
@@ -58,8 +58,8 @@
                         <i class="fas fa-bars"></i>
                     </label>
                     <div class="nav-mobile">
-                        <a href="/Sujet.html">Sur_Le_Jeu</a>
-                        <a href="/Auteur.html">Sur_Moi</a>
+                        <a href="Sujet.html">Sur_Le_Jeu</a>
+                        <a href="Auteur.html">Sur_Moi</a>
                         <a href="#">Services</a>
                     </div>
                 </nav>
@@ -84,11 +84,11 @@
         </section>
         <section id="Board_Container">
             <div id="Jeu_Board">
-                <img src="/images/07_clover.png" alt="">
+                <img src="./images/07_clover.png" alt="">
                 <p></p>
                 <p></p>
-                <img src="/images/08_bellhart.png" alt="">
-                <img src="/images/11_lace.png" alt="">
+                <img src="./images/08_bellhart.png" alt="">
+                <img src="./images/11_lace.png" alt="">
                 <p></p>
 
             </div>
