--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div>
                     <nav id="Main_Header">
-                        <a href="./Auteur.html" title="SHAW" style="color: #c0c0c0;">Sur moi<span class="fa-solid fa-user"></span></a>
+                        <a href="Auteur.html" title="SHAW" style="color: #c0c0c0;">Sur moi<span class="fa-solid fa-user"></span></a>
                     </nav>
                 </div>
             </section>
@@ -56,8 +56,8 @@
                   <i class="fas fa-bars"></i>
                 </label>
                 <div class="nav-mobile">
-                  <a href="/Sujet.html">Sur_Le_Jeu</a>
-                  <a href="/Auteur.html">Sur_Moi</a>
+                  <a href="Sujet.html">Sur_Le_Jeu</a>
+                  <a href="Auteur.html">Sur_Moi</a>
                   <a href="#">Services</a>
                 </div>
               </nav>
