Fixing_Path_GitHubPages_3

--- a/Sujet.html
+++ b/Sujet.html
@@ -21,7 +21,7 @@
             <section id="First">
                 <div>
                     <nav>
-                        <a href=""><img src="./images/hornet_large.png" class="img_header"></a>
+                        <img src="./images/hornet_large.png" class="img_header">
                     </nav>
                     <nav id="Main_Header">
                         <h1 style="color: azure;">SILKSONG</h1>
@@ -105,19 +105,19 @@
             <div class="carousel">
                 <div class="carousel-slides">
                     <div class="slide">
-                        <img src="/images/06_greymoor.png" alt="Image 1">
+                        <img src="./images/06_greymoor.png" alt="Image 1">
                     </div>
                     <div class="slide">
-                        <img src="/images/02_coral.png" alt="Image 2">
+                        <img src="./images/02_coral.png" alt="Image 2">
                     </div>
                     <div class="slide">
-                        <img src="/images/04_chorus.png" alt="Image 3">
+                        <img src="./images/04_chorus.png" alt="Image 3">
                     </div>
                     <div class="slide">
-                        <img src="/images/09a_peak.png" alt="Image 4">
+                        <img src="./images/09a_peak.png" alt="Image 4">
                     </div>
                     <div class="slide">
-                        <img src="/images/03_chambers.png" alt="Image 5">
+                        <img src="./images/03_chambers.png" alt="Image 5">
                     </div>
 
 
@@ -134,7 +134,7 @@
 
                 </p>
             </div>
-            <div><img id="Sound_Img" src="/images/Silksong_Soundtrack_Cover.png" alt=""></div>
+            <div><img id="Sound_Img" src="./images/Silksong_Soundtrack_Cover.png" alt=""></div>
 
         </section>
 
