--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <section id="First">
                 <div>
                     <nav>
-                        <a href=""><img src="./images/hornet_large.png" class="img_header"></a>
+                        <img src="./images/hornet_large.png" class="img_header">
                     </nav>
                     <nav id="Main_Header">
                         <h1 style="color: azure;">SILKSONG</h1>
