Correction_Header_Sujet

--- a/Sujet.html
+++ b/Sujet.html
@@ -5,13 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0acb75a9e8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css" />
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/.ico" href="./images/favicon.ico">
-    <title>Sur le Jeu</title>
+    <title>SILKSONG !</title>
 </head>
 
 <body>
@@ -74,7 +71,9 @@
 
 
     </header>
-    <main>
+
+
+   <main>
 
         <section id="Main_Jeu">
             <iframe id="YTB" src="https://www.youtube.com/embed/6XGeJwsUP9c">
@@ -140,12 +139,10 @@
 
 
     </main>
+
     <footer>
 
-
     </footer>
-
-
 
 </body>
 
