--- a/Auteur.html
+++ b/Auteur.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0acb75a9e8.js" crossorigin="anonymous"></script>
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/.ico" href="./images/favicon.ico">
-    <title>Document</title>
+    <title>Moi</title>
 </head>
 
 <body>
