--- a/Sujet.html
+++ b/Sujet.html
@@ -11,7 +11,7 @@
     <title>SILKSONG !</title>
 </head>
 
-<body>
+<body style="background-color: black;">
     <div id="loader">Loading</div>
     <header>
         <section id="header">
@@ -84,19 +84,28 @@
         <section id="Board_Container">
             <div id="Jeu_Board">
                 <img src="./images/07_clover.png" alt="">
-                <p></p>
-                <p></p>
+                <span id="Jeu_Text"><h2>Une nouvelle héroïne, un nouveau royaume</h2><p class="paragraphe">Hollow Knight: Silksong est l’aventure indépendante 
+                    la plus attendue de l’univers créé par Team Cherry.
+                     Cette fois, le joueur incarne Hornet, une guerrière agile et redoutable, propulsée dans un nouveau royaume mystérieux. 
+                     Plus rapide, plus verticale et plus dynamique que le premier opus, l’exploration y est au cœur de l’expérience.</p></span>
+                <span id="Jeu_Text"><h2>Un monde vivant et inquiétant</h2><p class="paragraphe">Le monde de Silksong se distingue par son ambiance élégante 
+                    et inquiétante, mêlant ruines anciennes, cités suspendues et forêts mécaniques.
+                     Chaque environnement raconte une histoire à travers ses détails visuels, ses sons et ses créatures uniques. 
+                    La direction artistique reste fidèle au style fait-main qui a rendu la série culte.</p></span>
                 <img src="./images/08_bellhart.png" alt="">
                 <img src="./images/11_lace.png" alt="">
-                <p></p>
+                <span id="Jeu_Text"><h2>Un système de combat repensé</h2><p class="paragraphe">Le système de combat a été entièrement repensé pour s’adapter aux capacités de Hornet.
+                     Là où le Chevalier privilégiait la précision, Hornet mise sur la vitesse, les acrobaties et l’utilisation d’outils. 
+                     Les affrontements deviennent plus stratégiques, demandant anticipation, réflexes et maîtrise du terrain.</p></span>
 
             </div>
 
         </section>
 
         <section id="Under_Main_Jeu">
-            <h2>WOW WOW WOW</h2>
-            <p>bla bla bla bal</p>
+            <h2>L’héritage de Team Cherry continue</h2>
+            <span><p class="paragraphe">Développé par Team Cherry, Silksong est une aventure dense avec des dizaines d’ennemis, des boss mémorables et un scénario plus complet.
+                Attendu par une immense communauté de fans, le jeu est l'évolution ambitieuse de l’univers de Hollow Knight.</p></span>
 
         </section>
 
@@ -122,14 +131,17 @@
 
         </section>
         <section id="Jeu_Soundtrack">
-            <div id="Sound">
+            <div>
                 <h2>
                     SOUNDTRACK
 
                 </h2>
 
-                <p>
-                    Made by Christopher Larkin
+                <p class="paragraphe">
+                    La musique de Silksong, composée par Christopher Larkin, joue un rôle essentiel dans l’atmosphère du jeu.
+                    Ses compositions mêlent mélodies délicates, tensions orchestrales et silences maîtrisés pour accompagner chaque zone avec une identité sonore unique.
+                    Les thèmes musicaux soutiennent l’émotion de l’exploration comme l’intensité des combats, donnant au monde de Silksong une profondeur immersive et mémorable,
+                    où chaque note renforce le sentiment de mystère et d’émerveillement.
 
                 </p>
             </div>
@@ -141,9 +153,8 @@
     </main>
 
     <footer>
-
+        <nav><p>Page par Gwendal Cauchon</p></nav>
     </footer>
-
 </body>
 
 </html>
